# spasm

./: .gitignore  .releaserc  Cargo.toml  README.md  test.s
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
src/: lib.rs  main.rs
src/addressing/: mod.rs
src/asm/: instruction.rs  mod.rs
src/backends/: README.md  mod.rs
src/backends/mos6502/: mod.rs
src/backends/mos6502/instruction_set/: address_mode.rs  addressing_mode.rs  mod.rs
src/backends/mos6502/instruction_set/tests/: address_mode.rs  addressing_mode.rs  instructions.rs  mod.rs
src/backends/mos6502/parser/: mod.rs
src/backends/mos6502/parser/tests/: address_mode.rs  instructions.rs  mod.rs
src/instruction_set/: address_mode.rs  mnemonics.rs  mod.rs  op_codes.rs
src/instruction_set/tests/: address_mode.rs  instructions.rs  mod.rs
src/ir/: instruction.rs  mod.rs
src/parser/: combinators.rs  mod.rs
src/parser/tests/: address_mode.rs  instructions.rs  mod.rs
src/preparser/: ast.rs  cfg.rs  compile.rs  interpreter.rs  mod.rs  typechecker.rs  types.rs
src/preparser/parser/: mod.rs
src/preparser/parser/tests/: mod.rs
src/preparser/tests/: interpreter.rs  mod.rs
src/tests/: mod.rs
