[package]
name = "spasm"
version = "0.2.0"
authors = ["Nate Catelli <ncatelli@packetfire.org>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v1.9.1" }
scrap = { git = "https://github.com/ncatelli/scrap", tag = "v0.1.1" }
isa-mos6502 = { git = "https://github.com/ncatelli/isa-mos6502", branch = "main" }
