[package]
name = "spasm"
version = "1.0.0"
authors = ["Nate Catelli <ncatelli@packetfire.org>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v1.9.1" }
scrap = { git = "https://github.com/ncatelli/scrap", branch = "main" }
isa-mos6502 = { git = "https://github.com/ncatelli/isa-mos6502", tag = "v0.2.0" }
