[package]
name = "spasm"
version = "1.1.2"
authors = ["Nate Catelli <ncatelli@packetfire.org>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v1.9.1" }
scrap = { git = "https://github.com/ncatelli/scrap", tag = "v1.0.0" }
isa-mos6502 = { git = "https://github.com/ncatelli/isa-mos6502", tag = "v0.2.0" }
